<resources>
    <string name="app_name">Calorie Crush</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeMessage">Welcome!\nEnter Your First Name\nAnd Weight.</string>
    <string name="name">Name</string>
    <string name="enterWeight">Enter Weight</string>
    <string name="kg">Kilograms</string>
    <string name="continueText">Continue ></string>
    <string name="pounds">Pounds</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="finish">Finish</string>

    <string name="date">Date</string>
    <string name="DurationOfRun">Duration</string>
    <string name="KMRan">KM Ran</string>
    <string name="AVGSpeed">AVG Speed</string>
    <string name="CalBurned">Calories Burned</string>
    <string name="maprunview">MAPRUNVIEW</string>

    <string name="sortBy">Sort By:</string>

    <string-array name="spinSortedValue">
        <item>Date</item>
        <item>Distance</item>
        <item>Running Time</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>

    <string name="totalTime">Total Time</string>
    <string name="total_distance">Total Distance</string>
    <string name="totalCalBurned">Total Calories Burned</string>
    <string name="avgSpeed">Average Speed</string>
    <string name="applyChanges">Apply Changes</string>
    <string name="NestedScroll">Nested ScrollView</string>
</resources>