<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.StatsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/avgSpeed"
        android:textColor="@color/bottomBarDark"
        android:textStyle="bold"
        android:letterSpacing="0.04"
        android:includeFontPadding="false"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalAverageSpeed"
        app:layout_constraintStart_toStartOf="@+id/tvTotalAverageSpeed"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalAverageSpeed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="196dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="00:00:00"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="0Km"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalCalBurned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="0Kcal"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalAverageSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="0Km/h"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/totalTime"
        android:textColor="@color/bottomBarDark"
        android:textStyle="bold"
        android:letterSpacing="0.04"
        android:includeFontPadding="false"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalTime"
        app:layout_constraintStart_toStartOf="@+id/tvTotalTime"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalTime" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/total_distance"
        android:textColor="@color/bottomBarDark"
        android:textStyle="bold"
        android:letterSpacing="0.04"
        android:includeFontPadding="false"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalDistance"
        app:layout_constraintStart_toStartOf="@+id/tvTotalDistance"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalDistance" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/totalCalBurned"
        android:textColor="@color/bottomBarDark"
        android:textStyle="bold"
        android:letterSpacing="0.04"
        android:includeFontPadding="false"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalCalBurned"
        app:layout_constraintStart_toStartOf="@+id/tvTotalCalBurned"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalCalBurned" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="80dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_end="510dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/time_icon"

        app:layout_constraintEnd_toEndOf="@+id/tvTotalTime"
        app:layout_constraintStart_toStartOf="@+id/tvTotalTime"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/distance_icon"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalDistance"
        app:layout_constraintStart_toStartOf="@+id/tvTotalDistance"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/cal_icon"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalCalBurned"
        app:layout_constraintStart_toStartOf="@+id/tvTotalCalBurned"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/speed_icon"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalAverageSpeed"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="@+id/tvTotalAverageSpeed"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>